# youtube-sentiment-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml  run_pipeline.py
.dvc/: config
.github/workflows/: cicd.yaml
app/: main.py
artifacts/data_transformation/: tfidf_vectorizer.pkl
notebooks/: 1_Preprocessing_&_EDA.ipynb  2_experiment_1_baseline_model.ipynb  3_experiment_2_bow_tfidf.ipynb  4_experiment_3_tfidf_(1,2)_max_features.ipynb  5_experiment_4_handling_imbalanced_data.ipynb  6_experiment_5_xgboost_with_hpt.ipynb  7_experiment_6_lightgbm_detailed_hpt.ipynb  8_stacking.ipynb
src/: data_ingestion.py  data_preprocessing.py  feature_engineering.py  model_building.py  model_evaluation.py
src/components/: data_ingestion.py  data_preprocessing.py  data_transformation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/logger/: __init__.py
src/utils/: main_utils.py
yt-chrome-plugin/: popup.js
